--- a/_config.yml
+++ b/_config.yml
@@ -68,4 +68,6 @@ theme: landscape
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git
+  repository: https://github.com/concefly/concefly.github.io
+branch: master
